crates/aura-macros/tests/boundaries/actor_root_unit_struct.rs
#[aura_macros::actor_root(
    owner = "runtime_service",
    domain = "runtime",
    supervision = "runtime_task_root",
    category = "actor_owned"
)]
pub struct RuntimeService;

fn main() {}
